# kbnotes

./: Cargo.toml  README.md
src/: backup_scheduler.rs  config.rs  error.rs  errors.rs  helper.rs  lib.rs  main.rs  note.rs  storage.rs  types.rs
src/cli/: app.rs  main.rs  mod.rs
