[package]
name = "kbnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.13.0"
walkdir = "2.3"
thiserror = "2.0.12"
fuzzy-matcher = "0.3"
notify = "8.0.0"
log = "0.4"
env_logger = "0.11.6"
