[package]
name = "kbnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
pulldown-cmark = "0.13.0"
walkdir = "2.5.0"
thiserror = "2.0.12"
fuzzy-matcher = "0.3.7"
notify = "8.0.0"
log = "0.4.26"
env_logger = "0.11.6"
dirs = "6.0.0"
tempfile="3.18.0"
zip = "2.2.3"
tokio = { version = "1", features = ["full"] }
which = "7.0.2"
shell-words = "1.1.0"
terminal_size = "0.4.2"
console = "0.15.11"
globset = "0.4.16"
